--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "jest --watchAll --verbose false"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -19,6 +20,7 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "jest": "^27.0.1",
     "nodemon": "^2.0.7"
   }
 }
